# chamoe

./: Cargo.toml  index.html
src/: app.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src/masses/: basic_with_move_vars.rs  changing_shape_color.rs  check_box_worker.rs  just_button.rs  mod.rs  test.rs  test2.rs
src/user_space_manager/: file_size_checker.rs  mod.rs
